o.c.archive.engine: Renamed unit tests into *UnitTest, *Headless etc.; fixed FindBugs warnings